Try to fix menu bug on iOS

--- a/src/styl/_menu.styl
+++ b/src/styl/_menu.styl
@@ -3,6 +3,11 @@
     -webkit-box-sizing border-box
     box-sizing border-box
 
+body
+    top 0
+    left 0
+    margin auto
+
 body.has-push-menu,
 body.has-push-menu aside,
 body.has-push-menu .progress-bar
