--- a/src/styl/_post.styl
+++ b/src/styl/_post.styl
@@ -37,7 +37,11 @@
             line-height rem(40px)
             margin 0 auto rem(29px)
     h1.post-title 
-        margin 0 auto rem(10px)
+        margin 0 auto
+        line-height rem(40px)
+        +above(cut)
+            line-height rem(60px)
+            margin 0 auto rem(10px)
     p.subtitle
         color: darken(lightGray,30%)
         font-size: rem(18px)
