--- a/src/styl/_search.styl
+++ b/src/styl/_search.styl
@@ -20,7 +20,7 @@
     .search-field
         width 100%
         height rem(40px)
-        line-height rem(40px)
+        line-height rem(30px)
         mainFont(300)
         font-size rem(20px)
         color primaryDark
@@ -28,6 +28,7 @@
         border 0
         border-radius rem(20px)
         padding rem(5px) rem(25px)
+        outline 0
         &:focus
             outline 0
     &.active
@@ -88,6 +89,7 @@
         border-radius 13px
         margin rem(7px)
         cursor pointer
+        outline 0
         z-index 1
         
 .search-overlay
